fixed gallery riddlesmiths link z-index issue position issue and added paint program to gallery

--- a/portfolio-2-2.css
+++ b/portfolio-2-2.css
@@ -9,7 +9,7 @@ a {
     /*  text-transform: uppercase;*/
     text-decoration: none;
     display: inline-block;
-    position: relative;
+/*    position: relative;*/
 }
 
 a:after {
